# student-database

./: .gitignore  CMakeLists.txt  requirements.txt
src/: database.cpp  database.hpp  student.cpp  student.hpp  tests.cpp
